--- a/Iemanja/iemanja.html
+++ b/Iemanja/iemanja.html
@@ -19,10 +19,10 @@
 
     </header>
     <nav>
-        <a href="">Home</a>
-        <a href="">Historia</a>
-        <a href="">Curiosidades</a>
-        <a href="">Pontos</a>
+        <a id="nav1" href="">Home</a>
+        <a id="nav2" href="">Historia</a>
+        <a id="nav3" href="">Curiosidades</a>
+        <a id="nav4" href="">Pontos</a>
     </nav>
     <main>
         <h1>Titulo 1</h1>
