--- a/Iemanja/iemanja.html
+++ b/Iemanja/iemanja.html
@@ -79,5 +79,7 @@
          </p>
         
     </main>
+
+    <footer><p>Desenvolvido por <a href="https://github.com/Dcaiogsiqueira">Caio Gomes Siqueira</a>.</p></footer>
 </body>
 </html>
