--- a/Principal/index.html
+++ b/Principal/index.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <a href="">Home</a>
-        <a href="">Historia</a>
+        <a href="../Orixás/orixas.html">Orixas</a>
         <a href="">Religião</a>
         <a href="">Energias</a>
         <a href=""></a>
