Criados links entre paginas

--- a/Orixás/orixas.html
+++ b/Orixás/orixas.html
@@ -14,8 +14,8 @@
             <h3>Facilis, suscipit.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
             <nav>
-                <a href="">Home</a>
-                <a href="">Historia</a>
+                <a href="../Principal/index.html">Home</a>
+                <a href="">Orixás</a>
                 <a href="">Curiosidades</a>
                 <a href="">Pontos</a>
             </nav>
