--- a/Principal/index.html
+++ b/Principal/index.html
@@ -8,16 +8,72 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
+    <header id="title">
         <h1>Espiritualismo</h1>
         <p>Aprenda sobre espiritualidade e suas evoluções</p>
     </header>
     <nav>
         <a href="">Home</a>
-        <a href="../Orixás/orixas.html">Orixas</a>
-        <a href="">Religião</a>
-        <a href="">Energias</a>
+        <a href="../Orixás/orixas.html">Orixá</a>
+        <a href=""></a>
+        <a href=""></a>
         <a href=""></a>
     </nav>
+    <main>
+        <h1>Titulo 1</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+           Maiores magnam laboriosam, aliquam aspernatur, perspiciatis 
+           reprehenderit nostrum delectus tenetur eveniet explicabo dele
+           niti consequuntur
+           tempore, id at illum ea officiis pariatur sequi!
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+           corporis, repudiandae repellendus, temporibus sint quaerat, 
+           natus aspernatur odit suscipit officia voluptatum quia atque 
+           sequi praesentium laudantium. Deserunt obcaecati quos eaque?
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+           Esse maxime ipsa, laboriosam est mollitia cupiditate qui! 
+           Maiores non tempora soluta cumque dolor, provident fugit? 
+           Et nesciunt officia ab molestias quos?
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            corporis, repudiandae repellendus, temporibus sint quaerat, 
+            natus aspernatur odit suscipit officia voluptatum quia atque 
+            sequi praesentium laudantium. Deserunt obcaecati quos eaque?
+         </p>
+ 
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Esse maxime ipsa, laboriosam est mollitia cupiditate qui! 
+            Maiores non tempora soluta cumque dolor, provident fugit? 
+            Et nesciunt officia ab molestias quos?
+         </p>
+
+        <h2>Titulo 2</h2>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+           Cupiditate repellat quas fugit perferendis, iusto ex tempore
+           sequi fugiat quasi dolore id facilis accusamus, distinctio
+           praesentium reprehenderit sapiente magni nemo obcaecati?
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+           Asperiores numquam inventore quae sint eum! Distinctio amet
+           optio aperiam consequatur consectetur itaque sapiente 
+           obcaecati! Nobis deserunt quod enim excepturi adipisci quos.
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Asperiores numquam inventore quae sint eum! Distinctio amet
+            optio aperiam consequatur consectetur itaque sapiente 
+            obcaecati! Nobis deserunt quod enim excepturi adipisci quos.
+         </p>
+    </main>
+    <footer><p>Desenvolvido por <a href="https://github.com/Dcaiogsiqueira">Caio Gomes Siqueira</a>.</p></footer>
+
 </body>
 </html>
