customizado menu dropdown

--- a/Orixás/orixas.html
+++ b/Orixás/orixas.html
@@ -13,11 +13,20 @@
             <h1>Orixás</h1>
             <h3>Facilis, suscipit.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-            <nav>
-                <a href="../Principal/index.html">Home</a>
-                <a href="">Orixás</a>
-                <a href="">Curiosidades</a>
-                <a href="">Pontos</a>
+            <nav >
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                          <li><a href="#">O que fazemos?</a>
+                             <ul>
+                                  <li><a href="#">Web Design</a></li>
+                                  <li><a href="#">SEO</a></li>
+                                  <li><a href="#">Design</a></li>
+                               </ul>
+                        </li>
+                    <li><a href="#">Links</a></li>
+                    <li><a href="#">Contato</a></li>
+            </ul>
             </nav>
         </div>
     </header>
