--- a/Orixás/orixas.html
+++ b/Orixás/orixas.html
@@ -15,14 +15,19 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
             <nav >
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="../Principal/index.html">Home</a></li>
                     <li><a href="#">Sobre</a></li>
-                          <li><a href="#">O que fazemos?</a>
-                             <ul>
-                                  <li><a href="#">Web Design</a></li>
-                                  <li><a href="#">SEO</a></li>
-                                  <li><a href="#">Design</a></li>
-                               </ul>
+                          <li><a href="">Orixas</a>
+                             <ul id="submenu">
+                                  <li><a href="Iemanja/iemanja.html">Iemanja</a></li>
+                                  <li><a href="#">Xango</a></li>
+                                  <li><a href="#">Oxala</a></li>
+                                  <li><a href="#">Ogun</a></li>
+                                  <li><a href="#">Logun</a></li>
+                                  <li><a href="#">Exu</a></li>
+                                  <li><a href="#">Oxossi</a></li>
+
+                              </ul>
                         </li>
                     <li><a href="#">Links</a></li>
                     <li><a href="#">Contato</a></li>
