--- a/Orixás/Iemanja/iemanja.html
+++ b/Orixás/Iemanja/iemanja.html
@@ -19,7 +19,7 @@
 
     </header>
     <nav>
-        <a href="">Home</a>
+        <a href="../orixas.html">Home</a>
         <a href="">Historia</a>
         <a href="">Curiosidades</a>
         <a href="">Pontos</a>
